--- a/index.html
+++ b/index.html
@@ -7,16 +7,39 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Map of the U.S. and State Flowers</title>
 	<link href='https://fonts.googleapis.com/css?family=Bitter|Oswald' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
-	
-</head>
+   </head>
 
+   <!--  CSS given   <link rel="stylesheet" type="text/css" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" /> -->
 <body>
 
-<p> This map was created by Isabella Alsina. All of the images and information is attributed to Wikipedia. </p>
-
+<div class = "navbar navbar-default navbar-static-top">
+	<div class = "container">
+		<a href = "#" class = "navbar-brand">State Flowers</a>
+		
+		<button class = "navbar-toggle" data-toggle = "collapse" data-target = ".navHeaderCollapse">
+		H
+		</button>
+		
+		
+		<div class = "collapse navbar-collapse navHeaderCollapse">
+			<ul class = "nav navbar-nav navbar-right">
+			
+				<li><a href = "#">Home</a></li>
+			
+			</ul>
+		</div>
+		
+</div>
+</div>
+<h1>Click a State and See Its Flower</h1>
+<div id="map">
+		<iframe src="http://createaclickablemap.com/map.php?&id=42578&online=true" width="600" height="350" style="border: none;"></iframe>
+		<script>if (window.addEventListener){ window.addEventListener("message", function(event) { if(event.data.length >= 22) { if( event.data.substr(0, 22) == "__MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } else if (window.attachEvent){ window.attachEvent("message", function(event) { if( event.data.length >= 22) { if ( event.data.substr(0, 22) == "__MM-LOCATION.REDIRECT") location = event.data.substr(22); } }, false); } </script>
+</div>
+	
 <script src="js/jquery.min.js"></script>
-<script src="js/myscript.js"></script>
-
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
